[ci skip] Update translations (Chinese Traditional)

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -187,11 +187,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="start_on_bottom">從底端開始</string>
     <string name="start_on_bottom_when_loading_document">當載入文件後，游標位於末尾</string>
     <string name="unordered_list_character">未排序的清單字元</string>
-    <string name="character_to_start_items_of_unordered_list_with">這些符號用來表示無序清單</string>
+    <string name="character_to_start_items_of_unordered_list_with">用來指示無序清單的字元</string>
     <string name="unordered_list_char_dash">連接號 (-)</string>
     <string name="unordered_list_char_asterisk">星號 (*)</string>
     <string name="unordered_list_char_plus">加號 (+)</string>
-    <string name="filemanager_doesnot_supply_required_data__appspecific">Markor 僅能編輯本機，離線可用的文件，亦不支援未提供完整路徑的檔案管理器。</string>
+    <string name="filemanager_doesnot_supply_required_data__appspecific">Markor 僅能編輯本機或離線的可用文件，也不支援未提供完整路徑的檔案管理器。</string>
     <string name="sync_to_local_folder_notice">注意：如果使用某個同步程式，該文件將位於已知或自訂的資料夾，您可以變更Markor的文件目錄或以其他檔案管理程式開啟。</string>
     <string name="configure_in_the_apps_settings">在程式的設定選項中調校。</string>
     <string name="vertical_alignment">垂直偏移</string>
@@ -202,8 +202,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="top">頂端</string>
     <string name="bottom">底端</string>
     <string name="center">中央</string>
-    <string name="textaction_spacing">工作列按鈕間距</string>
-    <string name="horizontal_space_between_textactions">工作列按鈕之間的水平間距</string>
+    <string name="textaction_spacing">文字動作間距</string>
+    <string name="horizontal_space_between_textactions">文字動作按鈕之間的水平間距</string>
     <string name="center_text">文件中央</string>
     <string name="edit_text_in_center_of_screen">從螢幕中央開始編輯文件。</string>
     <string name="clipboard">剪貼簿</string>
@@ -213,7 +213,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="translate">翻譯</string>
     <string name="more_info_and_help">更多關於這個App的資訊和幫助</string>
     <string name="report_bugs">回報臭蟲</string>
-    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">更多關於如何贊助開發或支持這個專案的資訊</string>
+    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">關於如何贊助開發或支持這個專案的更多資訊</string>
     <string name="join_community">加入社團</string>
     <string name="bug_reports_suggest_improvements">提供回饋，回報臭蟲或改善建議</string>
     <string name="help_translating_this_app">翻譯這個App的語文界面</string>
@@ -224,17 +224,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="contributors_public_add_yourself_description">顯示 貢獻者的資訊，貢獻者在提供所有後可在此留下訊息（選項）</string>
     <string name="descending">降冪</string>
     <string name="ascending">升羃</string>
-    <string name="disable_spelling_underline">停用拼字檢查</string>
-    <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">保留鍵盤輸入時顯示的文字建議，移除紅色底線</string>
+    <string name="disable_spelling_underline">停用拼字底線</string>
+    <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">鍵盤輸入的建議停止時，紅色底線消失</string>
     <string name="location">地點</string>
     <string name="text_lines">文字行</string>
     <string name="text_characters">字元</string>
-    <string name="text_words">字詞</string>
-    <string name="directory">資料夾</string>
-    <string name="recently_viewed_documents">最近開啟的檔案</string>
+    <string name="text_words">文字單詞</string>
+    <string name="directory">目錄</string>
+    <string name="recently_viewed_documents">最近檢視的文件</string>
     <string name="details">細節</string>
     <string name="calendar">日曆</string>
-    <string name="warning_disallowed_sd_access">警告！這個應用程式沒有儲存此檔案的權限，所有變更都將遺失。若無法解決這個問題或確認某些設定，Android 將在此拒絕存取。</string>
+    <string name="warning_disallowed_sd_access">警告！應用程式沒有儲存這個檔案的權限，所有變更都將遺失。若無法解決這個問題或確認某些設定，Android 將拒絕任何存取。</string>
     <string name="error_picture_selection">無相片被選擇、拍攝，或儲存</string>
     <string name="gallery_picture">相簿</string>
     <string name="camera_picture">相機圖片</string>
@@ -246,11 +246,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="miscellaneous">其他</string>
     <string name="textaction">文字動作</string>
     <string name="textactions">文字動作</string>
-    <string name="prefer_view">預設檢視</string>
+    <string name="prefer_view">偏好檢視</string>
     <string name="no_calendar_app_is_installed">未找到日曆應用程式</string>
     <string name="popular_documents">常用文件</string>
     <string name="color">顏色</string>
-    <string name="zero_width_space">零寬空格</string>
+    <string name="zero_width_space">無間隔空間</string>
     <string name="basic_color_scheme">基本顏色主題</string>
     <string name="background_foreground_color_in_editor_works_dark_light">Changes background and foreground color of the text editor. Adjusts to app theme so available in light and dark theme. Syntax highlighting colors remain the same.</string>
     <string name="preset">預設值</string>
