Markor v2.9 update prep, by @gsantner

--- a/doc/news/2022-05-01-markor-v2.9.md
+++ b/doc/news/2022-05-01-markor-v2.9.md
@@ -1,6 +1,6 @@
 ---
 layout: photo
-title: "Markor v2.x - Topic"
+title: "Markor v2.9 - Topic"
 tags: [project, markor, android, "todo.txt", markdown, fdroid, texteditor, opensource, editor, offline, android, app, bookmarks, todo, tasks, viewer, reader, notes]
 #excerpt: 'Update release post about Markor - Text Editor for Notes, ToDo and Bookmarks.'
 categories: [android]
@@ -11,14 +11,14 @@ packageid: "net.gsantner.markor"
 #photos: 'BASEURL/assets/blog/img/header-markor.jpg'#description:
 #permalink:
 ---
-Markor v2.x update is out!
+Markor v2.9 update is out!
 Get the update from [F-Droid](https://f-droid.org/repository/browse/?fdid=net.gsantner.markor) or [GitHub](https://github.com/gsantner/markor/releases/latest)!  
 Continue reading to find out what's new, improved and fixed in this update.  
 
 
 <p style="font-size: 52px; font-weight: bold; color: #B6383E; text-decoration: underline overline;text-underline-offset: 18px;">Highlights</p>
 
-## Topic 1
+## Topic A
 Multi-selection was added to Markor's dialogs, particularly for the todo.txt format.
 
 * You can now select multiple context & formats to search for, or to insert.
