feat(save as): add button save as, its icon and its description string.

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -48,7 +48,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="html_as_plaintext">HTML (純文字)</string>
     <string name="document_editor_font">文件編輯字型</string>
     <string name="theme">主題</string>
-    <string name="open_existing_files_in_view_mode">在檢視模式中開啟現有的文件</string>
+    <string name="open_existing_files_in_view_mode">於檢視模式中開啟現有的文件</string>
     <string name="about">說明</string>
     <string name="plaintext">純文字文件</string>
     <string name="file">檔案</string>
@@ -63,7 +63,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="select_entries">選擇 輸入文字</string>
     <string name="one_item_selected">已經選擇一個項目</string>
     <string name="items_selected_witharg" tools:ignore="PluralsCandidate">已選擇 %d 項目</string>
-    <string name="hide_statusbar_at_this_view">在這個檢視模式中隱藏狀態列</string>
+    <string name="hide_statusbar_at_this_view">在此檢視隱藏狀態列</string>
     <string name="hide_statusbar">隱藏狀態列</string>
     <string name="name">名稱</string>
     <string name="url_or_path">網址 / 路徑</string>
@@ -104,7 +104,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="history">歷史</string>
     <string name="sync">同步</string>
     <string name="search_or_custom">搜尋／自訂</string>
-    <string name="save">儲存</string>
+    <string name="save">儲存\t(從 Markor 存儲到磁盤)</string>
+    <string name="save_as">另存為\t(新文件)</string>
     <string name="update">升級</string>
     <string name="clear">清除</string>
     <string name="due_date">到期日</string>
@@ -116,8 +117,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="refresh">更新</string>
     <string name="create_shortcut">建立捷徑</string>
     <string name="tried_to_create_shortcut_for_this_notice">嘗試在您的主頁建立一個捷徑以方便編輯這個文件，注意，有的啟動器不支援這個功能。</string>
-    <string name="file_not_in_save_path_do_import_notice__appspecific">所選的檔案不在這個應用的筆記本目錄中，您要將它複製到現有資料夾裡嗎？這將會覆寫已存在的同名檔案。</string>
-    <string name="file_not_in_current_folder_do_copy__appspecific">該檔案不在目前的資料夾中。您要將它複製到現行的資料夾裡嗎？這將會覆寫任何已存在的同名檔案。</string>
+    <string name="file_not_in_save_path_do_import_notice__appspecific">所選的檔案不在應用程式的筆記本目錄中，您要將它複製到現有資料夾裡嗎？這將會覆寫已存在的同名檔案。</string>
+    <string name="file_not_in_current_folder_do_copy__appspecific">該檔案不在目前的資料夾中。您要將它複製到現有資料夾裡嗎？這將會覆寫已存在的同名檔案。</string>
     <string name="files_and_folders">檔案和資料夾</string>
     <string name="document_browser">文件瀏覽器</string>
     <string name="file_browser">檔案瀏覽器</string>
@@ -141,7 +142,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlighting_delay_lower_value_more_battery_drain_description__appspecific">延遲的閃亮標記以毫秒更新記時，較低值會提早開始標記，但會降低效能與耗電。</string>
     <string name="highlighting_enabled_or_not__appspecific">不管輸入的文字是否已標記都要調整</string>
     <string name="control_font_size_in_editor">調整在編輯器中使用的字型</string>
-    <string name="textactions_show_useful_actions_description__appspecific">在底部顯示工作列按鈕以快速修改輸入的內容或執行其他文字動作。</string>
+    <string name="textactions_show_useful_actions_description__appspecific">在底部顯示工作列按鈕以快速修改輸入的內容或執行其他動作。</string>
     <string name="load_last_opened_folder_at_startup">啟動時開啟最後使用的資料夾</string>
     <string name="format">格式</string>
     <string name="contexts">全文</string>
@@ -162,20 +163,20 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending">標記行末</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">標記末尾有兩三個空格的行</string>
     <string name="use_monospace_for_code">程式碼使用 Monospace</string>
-    <string name="disable_code_block_highlight">停用高亮程式碼區塊</string>
-    <string name="auto_renumber_ordered_list">自動重新編號已排序的清單</string>
-    <string name="auto_renumber_ordered_list_slowdown">這個選項可能影響應用效能</string>
+    <string name="disable_code_block_highlight">停用程式碼語法突顯</string>
+    <string name="auto_renumber_ordered_list">有序清單自動重新編號</string>
+    <string name="auto_renumber_ordered_list_slowdown">此設定可能影響應用程式效能</string>
     <string name="use_different_fonttype_slow_down">動態地變更字型將影響程式效能</string>
     <string name="general">平常</string>
     <string name="resources">來源</string>
     <string name="space_between_lines_in_percent">行距以百分比表示</string>
     <string name="line_spacing">行距</string>
     <string name="archive_does_move_done_tasks">移動完成的工作到相同資料夾的指定文件上。</string>
-    <string name="sort_tasks_by_selected_order">依所選的順序進行任務排列</string>
+    <string name="sort_tasks_by_selected_order">依所選的順序對任務進行排列</string>
     <string name="special_key">特殊鍵</string>
     <string name="key_page_up">往上頁 (Page Up)</string>
     <string name="key_page_down">往下頁 (Page Down)</string>
-    <string name="move_text_one_line_up">往上面一行移動文字</string>
+    <string name="move_text_one_line_up">移動文字到上一行</string>
     <string name="move_text_one_line_down">移動文字到下一行</string>
     <string name="start_new_line_below">在底下開始新的一行</string>
     <string name="key_pos_1">起始行 (Pos Home)</string>
@@ -186,12 +187,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_tab">表格</string>
     <string name="start_on_bottom">從底端開始</string>
     <string name="start_on_bottom_when_loading_document">當載入文件後，游標位於末尾</string>
-    <string name="unordered_list_character">未排序的清單字元</string>
-    <string name="character_to_start_items_of_unordered_list_with">用來指示無序清單的字元</string>
+    <string name="unordered_list_character">無序清單項目符號</string>
+    <string name="character_to_start_items_of_unordered_list_with">這些符號用來表示無序清單</string>
     <string name="unordered_list_char_dash">連接號 (-)</string>
     <string name="unordered_list_char_asterisk">星號 (*)</string>
     <string name="unordered_list_char_plus">加號 (+)</string>
-    <string name="filemanager_doesnot_supply_required_data__appspecific">Markor 僅能編輯本機或離線的可用文件，也不支援未提供完整路徑的檔案管理器。</string>
+    <string name="filemanager_doesnot_supply_required_data__appspecific">Markor 僅能編輯本機，離線可用的文件，亦不支援未提供完整路徑的檔案管理器。</string>
     <string name="sync_to_local_folder_notice">注意：如果使用某個同步程式，該文件將位於已知或自訂的資料夾，您可以變更Markor的文件目錄或以其他檔案管理程式開啟。</string>
     <string name="configure_in_the_apps_settings">在程式的設定選項中調校。</string>
     <string name="vertical_alignment">垂直偏移</string>
@@ -202,8 +203,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="top">頂端</string>
     <string name="bottom">底端</string>
     <string name="center">中央</string>
-    <string name="textaction_spacing">文字動作間距</string>
-    <string name="horizontal_space_between_textactions">文字動作按鈕之間的水平間距</string>
+    <string name="textaction_spacing">工作列按鈕間距</string>
+    <string name="horizontal_space_between_textactions">工作列按鈕之間的水平間距</string>
     <string name="center_text">文件中央</string>
     <string name="edit_text_in_center_of_screen">從螢幕中央開始編輯文件。</string>
     <string name="clipboard">剪貼簿</string>
@@ -213,7 +214,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="translate">翻譯</string>
     <string name="more_info_and_help">更多關於這個App的資訊和幫助</string>
     <string name="report_bugs">回報臭蟲</string>
-    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">關於如何贊助開發或支持這個專案的更多資訊</string>
+    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">更多關於如何贊助開發或支持這個專案的資訊</string>
     <string name="join_community">加入社團</string>
     <string name="bug_reports_suggest_improvements">提供回饋，回報臭蟲或改善建議</string>
     <string name="help_translating_this_app">翻譯這個App的語文界面</string>
@@ -224,17 +225,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="contributors_public_add_yourself_description">顯示 貢獻者的資訊，貢獻者在提供所有後可在此留下訊息（選項）</string>
     <string name="descending">降冪</string>
     <string name="ascending">升羃</string>
-    <string name="disable_spelling_underline">停用拼字底線</string>
-    <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">鍵盤輸入的建議停止時，紅色底線消失</string>
+    <string name="disable_spelling_underline">停用拼字檢查</string>
+    <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">保留鍵盤輸入時顯示的文字建議，移除紅色底線</string>
     <string name="location">地點</string>
     <string name="text_lines">文字行</string>
     <string name="text_characters">字元</string>
-    <string name="text_words">文字單詞</string>
-    <string name="directory">目錄</string>
-    <string name="recently_viewed_documents">最近檢視的文件</string>
+    <string name="text_words">字詞</string>
+    <string name="directory">資料夾</string>
+    <string name="recently_viewed_documents">最近開啟的檔案</string>
     <string name="details">細節</string>
     <string name="calendar">日曆</string>
-    <string name="warning_disallowed_sd_access">警告！應用程式沒有儲存這個檔案的權限，所有變更都將遺失。若無法解決這個問題或確認某些設定，Android 將拒絕任何存取。</string>
+    <string name="warning_disallowed_sd_access">警告！這個應用程式沒有儲存此檔案的權限，所有變更都將遺失。若無法解決這個問題或確認某些設定，Android 將在此拒絕存取。</string>
     <string name="error_picture_selection">無相片被選擇、拍攝，或儲存</string>
     <string name="gallery_picture">相簿</string>
     <string name="camera_picture">相機圖片</string>
@@ -246,11 +247,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="miscellaneous">其他</string>
     <string name="textaction">文字動作</string>
     <string name="textactions">文字動作</string>
-    <string name="prefer_view">偏好檢視</string>
+    <string name="prefer_view">預設檢視</string>
     <string name="no_calendar_app_is_installed">未找到日曆應用程式</string>
     <string name="popular_documents">常用文件</string>
     <string name="color">顏色</string>
-    <string name="zero_width_space">無間隔空間</string>
+    <string name="zero_width_space">零寬空格</string>
     <string name="basic_color_scheme">基本顏色主題</string>
     <string name="background_foreground_color_in_editor_works_dark_light">Changes background and foreground color of the text editor. Adjusts to app theme so available in light and dark theme. Syntax highlighting colors remain the same.</string>
     <string name="preset">預設值</string>
@@ -314,7 +315,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="recursive_search_in_current_directory">在目前目錄中遞迴搜尋</string>
     <string name="always_open_with_this_app">總是使用此應用程式開啟</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">當列表的項目裡包含副檔名時，總是以這個程式開啟檔案。如果您要編輯網頁檔案或其他不含附檔名的檔案時，可以使用 \'None, .html, .css , .js\' 等。</string>
-    <string name="template">範本</string>
+    <string name="template">模板</string>
     <string name="send_debug_log">傳送偵錯日誌</string>
     <string name="print_pdf">列印 / PDF</string>
     <string name="bigger_headings">大標題</string>
@@ -329,7 +330,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reading">讀取中</string>
     <string name="read">讀取</string>
     <string name="table">表格</string>
-    <string name="how_much_columns_press_table_button_long_to_start_table">需要多少欄 (columns)？長按表格按鈕建立表格（插入 header），輕觸則新增一列 (row)。</string>
     <string name="example_of_a_markdown_table">Markdown 表格示例</string>
     <string name="delete_lines">刪除線</string>
     <string name="unordered_list">無序清單</string>
@@ -364,22 +364,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="back">返回</string>
     <string name="expand_collapse">展開／摺疊</string>
     <string name="essential">基本設定</string>
-    <string name="append_human_readable_uuid_to_new_tasks">增添人類可讀的UUID到新任務</string>
     <string name="action_order">動作順序</string>
     <string name="toggle_action_visibility">切换動作可見性</string>
     <string name="load_default_settings">載入預設設定</string>
     <string name="drag">拖曳</string>
     <string name="created">已建立</string>
     <string name="file_encryption_password">檔案加密密碼</string>
-    <string name="no_password_set_cannot_encrypt_decrypt">未設定密碼，無法加密或解密。\n 請到設定-&gt; 一般 -&gt; 密碼，設定一個密碼。</string>
     <string name="encrypt_file_content">加密檔案內容</string>
     <string name="could_not_encrypt_file_content_the_file_was_not_saved">無法加密檔案內容。檔案未儲存。</string>
-    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">無法解密檔案內容。你的密碼錯了嗎？這個檔案真的是用Markors的AES加密過的嗎？</string>
-    <string name="password_already_set_setting_a_new_password_will_overwrite">已設好密碼。設定新密碼將會覆蓋既存的密碼，如果你忘了新密碼，可能不能再讀取檔案了。</string>
     <string name="code_block">程式碼區塊</string>
     <string name="add_completion_date">加入完成日期</string>
     <string name="add_completion_date_for_todos_when_marking_them_as_done">將待辦事項標示為已完成時，加入完成日期</string>
-    <string name="file_description_format">檔案加密格式</string>
     <string name="loading_default_value">正在載入預設值</string>
     <string name="file_settings">檔案設定</string>
     <string name="search_and_replace">搜尋 / 取代</string>
