--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -106,6 +106,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="search_or_custom">搜索 / 自定义</string>
     <string name="save">保存\t(从 Markor 存储到磁盘)</string>
     <string name="save_as">另存为\t(新文件)</string>
+
+    <string name="hint_current_file_has_changed">当前编辑的文件已经更改，是否先保存?</string>
+    <string name="hint_current_file_has_changed_yes">是，先保存。</string>
+    <string name="hint_current_file_has_changed_no">不必了。</string>
+
     <string name="update">更新</string>
     <string name="clear">清空</string>
     <string name="due_date">截止日期</string>
